--- a/week2/static/css/auth.css
+++ b/week2/static/css/auth.css
@@ -1,6 +1,6 @@
 body {
     background: var(--Linkbrary-bg);
-    padding: 14.875rem 0rem 15.8125rem 0rem;/* 238px 0px 253px 0px; */
+    padding: 23.8rem 0rem 25.3rem 0rem;/* 238px 0px 253px 0px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,26 +9,26 @@ body {
 }
 
 body.signup {
-    padding-bottom: 7.3125rem; /* 117px; */
+    padding-bottom: 11.7rem; /* 117px; */
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem; /* 16px; */
+    gap: 1.6rem; /* 16px; */
 }
 
 header object, header img {
-    width: 13.125rem; /* 210px; */
-    height: 2.375rem; /* 38px; */
+    width: 21rem; /* 210px; */
+    height: 3.8rem; /* 38px; */
 }
 
 header p {
     color: #000;
-    font-size: 1rem; /* 16px; */
+    font-size: 1.6rem; /* 16px; */
     font-weight: 400;
-    line-height: 1.5rem; /* 24px; */ /* 150% */
+    line-height: 150%; /* 24px; */ /* 150% */
 }
 
 header p a {
@@ -41,15 +41,15 @@ header p a {
 main {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem; /* 24px; */
-    margin-top: 1.875rem; /* 30px; */
-    margin-bottom: 1.875rem; /* 30px; */
+    gap: 2.4rem; /* 24px; */
+    margin-top: 3rem; /* 30px; */
+    margin-bottom: 3rem; /* 30px; */
 }
 
 .input-txt {
-    width: 25rem; /* 400px; */
-    padding: 1.125rem 0.9375rem; /* 18px 15px; */
-    border-radius: 0.5rem; /* 8px; */
+    width: 40rem; /* 400px; */
+    padding: 1.8rem 1.5rem; /* 18px 15px; */
+    border-radius: 0.8rem; /* 8px; */
     border: 1px solid var(--Linkbrary-gray20);
     background: var(--Linkbrary-white);
 }
@@ -67,47 +67,47 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 0.75rem; /* 12px; */
+    gap: 1.2rem; /* 12px; */
     position: relative;
 }
 
 .wrap-input p {
     color: #000;
-    font-size: 0.875rem; /* 14px; */
+    font-size: 1.4rem; /* 14px; */
 }
 
 .eye-off {
     position: absolute;
-    bottom: 1.125rem; /* 18px; */
-    right: 0.9375rem; /* 15px; */
+    bottom: 1.8rem; /* 18px; */
+    right: 1.5rem; /* 15px; */
 }
 
 footer {
-    margin-top: 2rem; /* 32px; */
+    margin-top: 3.2rem; /* 32px; */
     display: flex;
-    width: 25rem; /* 400px; */
-    padding: 0.75rem 1.5rem; /* 12px 24px; */
+    width: 40rem; /* 400px; */
+    padding: 1.2rem 2.4rem; /* 12px 24px; */
     justify-content: space-between;
     align-items: center;
-    border-radius: 0.5rem; /* 8px; */
+    border-radius: 0.8rem; /* 8px; */
     border: 1px solid var(--Linkbrary-gray20);
     background: var(--Linkbrary-gray10);
 }
 
 footer p {
     color: var(--Linkbrary-gray100, #373740);
-    font-size: 0.875rem; /* 14px; */
+    font-size: 1.4rem; /* 14px; */
 }
 
 .wrap-icon {
     display: flex;
     align-items: center;
-    gap: 1rem; /* 16px; */
+    gap: 1.6rem; /* 16px; */
 }
 
 .social-login-icon {
-    width: 2.625rem; /* 42px; */
-    height: 2.625rem; /* 42px; */
+    width: 4.2rem; /* 42px; */
+    height: 4.2rem; /* 42px; */
 }
 
 .social-login-icon.google {
@@ -116,11 +116,17 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0rem 0.25rem 0.25rem 0rem rgba(0, 0, 0, 0.25);; /* 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.25);; /* 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .txt-wrong {
     color: var(--Linkbrary-red);
-    font-size: 0.875rem; /* 14px; */
-    margin-top: -0.875rem; /* -14px; */ 
+    font-size: 1.4rem; /* 14px; */
+    margin-top: -1.4rem; /* -14px; */ 
+}
+
+@media screen and (max-width: 767px) {
+    body {
+        padding: 12rem 3.2rem;
+    }
 }
