--- a/week2/static/css/button.css
+++ b/week2/static/css/button.css
@@ -4,25 +4,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.625rem; /* 10px; */
-    padding: 1rem 1.25rem; /* 16px 20px; */
-    border-radius: 0.5rem; /* 8px; */
+    gap: 1rem; /* 10px; */
+    padding: 1.6rem 2rem; /* 16px 20px; */
+    border-radius: 0.8rem; /* 8px; */
     background: linear-gradient(91deg, var(--Linkbrary-primary-color) 0.12%, #6AE3FE 101.84%);
     border: none;
     color: var(--Grey-Light);
-    font-size: 1.125rem; /* 18px; */
+    font-size: 1.8rem; /* 18px; */
     font-weight: 600;
     cursor: pointer;
 }
 
 .primary-btn.sm {
-    width: 8rem; /* 128px; */
+    width: 12.8rem; /* 128px; */
 }
 
 .primary-btn.md {
-    width: 21.875rem; /* 350px; */
+    width: 35rem; /* 350px; */
 }
 
 .primary-btn.lg {
-    width: 25rem; /* 400px; */
+    width: 40rem; /* 400px; */
+}
+
+@media screen and (max-width: 767px) {
+    .primary-btn {
+        padding: 1rem 1.6rem;
+    }
+    .primary-btn.md {
+        width: 20rem;
+    }
 }
