--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 :root {
   --pirmary-6d6afe: #6d6afe;
   --red-ff5b56: #ff5b56;
@@ -7,4 +9,8 @@
   --gray-9FA6B2: #9fa6b2;
   --gray-CCD5E3: #ccd5e3;
   --gray-F0F6FF: #f0f6ff;
+}
+
+* {
+  box-sizing: border-box;
 }
