sign in 페이지 배경색상 누락 적용

--- a/signin/signin.css
+++ b/signin/signin.css
@@ -23,6 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: Pretendard;
+  background-color: var(--gray-F0F6FF);
 }
 
 .title {
