--- a/css/sign.css
+++ b/css/sign.css
@@ -24,6 +24,8 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  display: flex;
+  column-gap: 5px;
 }
 .question a {
   font-weight: 600;
@@ -39,6 +41,9 @@ input {
   width: 400px;
   display: block;
   margin: 12px 0 24px;
+}
+.password input {
+  padding-right: 45px;
 }
 label {
   font-size: 14px;
