--- a/signin/signin.css
+++ b/signin/signin.css
@@ -70,6 +70,7 @@ body {
   border: 1px solid var(--gray-CCD5E3);
   border-radius: 8px;
   background-color: var(--white-FFF);
+  font-size: 16px;
 }
 
 .button {
