--- a/signup/signup.css
+++ b/signup/signup.css
@@ -14,3 +14,110 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Pretendard;
+  background-color: var(--gray-F0F6FF);
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title_p {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 16px;
+}
+
+.title_link {
+  margin-left: 8px;
+  color: var(--pirmary-6d6afe);
+  font-weight: 600;
+}
+
+.form_section {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.form_section_div {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.div_margin {
+  margin-top: 24px;
+}
+
+.label {
+  font-size: 14px;
+}
+
+.input {
+  padding: 18px 15px;
+  border: 1px solid var(--gray-CCD5E3);
+  border-radius: 8px;
+  background-color: var(--white-FFF);
+  color: #373740;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+  top: 47.5px;
+  right: 15px;
+}
+
+.button {
+  width: 400px;
+  padding: 16px 20px;
+  border-style: none;
+  border-radius: 8px;
+  background: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  color: #f5f5f5;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.footer {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 24px;
+  border: 1px solid var(--gray-CCD5E3);
+  border-radius: 8px;
+  background-color: #e7effb;
+  margin-top: 32px;
+}
+
+.footer_text {
+  color: #373740;
+  font-size: 14px;
+}
+
+.footer_link {
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+}
