--- a/css/common/footer.css
+++ b/css/common/footer.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 /* 
 2024.02.23 v1
 footer css
@@ -8,8 +6,7 @@ footer css
   margin-top: 7.5rem;
   background-color: var(--color-black);
 }
-
-.foot__main>.inner {
+.foot__inner {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
@@ -17,67 +14,52 @@ footer css
   padding: 2rem 2rem 6.5rem;
   margin: 0 auto;
 }
-
-.foot__main img {
+.foot__inner img {
   color: var(--color-light);
 }
-
-.foot__main address a {
+.foot__sign a {
   color: #676767;
 }
-
-.foot__main .foot__nav {
+.foot__nav {
   justify-content: center;
   gap: 0.938rem;
 }
-
-.foot__main .foot__nav a {
+.foot__nav a {
   color: #CFCFCF;
 }
-
-.foot__main .btn__sns {
+.foot__btn__sns {
   justify-content: flex-end;
   gap: 0.75rem;
 }
-
-.foot__main .btn__sns a {
+.foot__btn__sns a {
   display: block;
   width: 1.25rem;
   color: var(--color-light);
 }
 
-/* @media screen and (max-width: 1199px) {
-
-} */
-
 @media screen and (max-width: 767px) {
   .foot__main {
     margin-top: 2.5rem;
   }
-
-  .foot__main>.inner {
+  .foot__inner {
     grid-template-columns: auto;
     grid-template-areas: "a2 a3" "a1 a1";
     max-width: 100%;
     padding: 2rem;
     gap: 3.75rem 1.25rem;
   }
-
-  .foot__main .foot__nav {
-    justify-content: flex-start;
-  }
-
-  .foot__main .inner address {
+  .foot__sign {
     grid-area: a1;
   }
-
-  .foot__main .inner .foot__nav {
+  .foot__nav {
+    justify-content: flex-start;
     grid-area: a2;
     flex-wrap: wrap;
   }
-
-  .foot__main .inner .btn__sns {
+  .foot__btn__sns {
     grid-area: a3;
     flex-wrap: wrap;
   }
 }
+
+/*# sourceMappingURL=footer.css.map */
