--- a/css/page/main.css
+++ b/css/page/main.css
@@ -3,9 +3,8 @@
 2024.02.23 v1
 메인 css
 */
-
 /* common section */
-.section>.inner {
+.section__inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -15,7 +14,10 @@
   max-width: 66.375rem;
   gap: 0 32px;
 }
-
+.section:nth-child(odd) .section__inner .section__text__box {
+  order: 2;
+  padding-right: 2rem;
+}
 .section__text__box p {
   padding: 0.625rem 0 0;
   font-weight: 500;
@@ -23,7 +25,6 @@
   color: #6B6B6B;
   word-break: keep-all;
 }
-
 .section__text__box p::before {
   content: "";
   display: none;
@@ -35,7 +36,6 @@
   background-position: top center;
   border-radius: 0.938rem;
 }
-
 .section__img__box {
   width: 34.375rem;
   height: 28.125rem;
@@ -47,70 +47,53 @@
   overflow: hidden;
 }
 
-.section:nth-child(odd):not(.section__banner)>.inner .section__text__box {
-  order: 2;
-  padding-right: 2rem;
-}
-
 @media screen and (max-width: 1199px) {
   .section__img__box {
     width: 24.063rem;
     height: 19.688rem;
   }
-
-  .section:nth-child(odd):not(.section__banner)>.inner .section__text__box {
+  .section:nth-child(odd) .section__inner .section__text__box {
     padding-right: 0;
   }
 }
-
 @media screen and (max-width: 767px) {
-  .section>.inner {
+  .section__inner {
     flex-direction: column;
     align-items: flex-start;
     padding: 2.5rem 2rem;
     gap: 0;
   }
-
-  .section:not(.section__banner)>.inner .title {
+  .section__inner .title {
     padding: 0 0 1.25rem;
   }
-
-  .section>.inner .title br {
+  .section__inner .title br {
     display: none;
   }
-
-  .section>.inner .text__size__m {
+  .section__inner .text__size__m {
     font-size: 0.938rem;
     line-height: 1.406rem;
   }
-
-  .section>.inner .text__size__m br {
+  .section__inner .text__size__m br {
     display: none;
     word-break: keep-all;
   }
-
-  .section>.inner .section__text__box {
-    width: 100%;
-  }
-
-  .section:nth-child(odd):not(.section__banner)>.inner .section__text__box {
+  .section:nth-child(odd):not(.section__banner) > .inner .section__text__box {
     order: unset;
     width: 100%;
   }
-
+  .section__text__box {
+    width: 100%;
+  }
   .section__text__box p {
     padding: 0;
   }
-
   .section__text__box p::before {
     display: block;
   }
-
   .section__img__box {
     display: none;
   }
 }
-
 /* each section */
 .section__banner {
   display: flex;
@@ -122,95 +105,77 @@
   background: url(../../img/bg/bg-banner.svg) no-repeat center bottom, var(--color-gray5);
   background-size: 1028px auto;
 }
-
 .section__banner .title {
   padding: 4.375rem 0 0;
 }
-
 .section__banner .title br:nth-of-type(2) {
   display: none;
 }
-
 .section__banner .btn__link-add {
   margin-top: 2.5rem;
   width: 100%;
   max-width: 21.875rem;
 }
-
 .section__link {
   padding: 4.375rem 0 0;
 }
-
 .section__link .section__img__box {
   background-image: url(../../img/bg/bg-sec-1.png);
 }
-
 .section__folder .section__img__box {
   background-image: url(../../img/bg/bg-sec-2.png);
 }
-
 .section__share .section__img__box {
   background-image: url(../../img/bg/bg-sec-3.png);
 }
-
 .section__search .section__img__box {
   background-image: url(../../img/bg/bg-sec-4.png);
 }
-
 
 @media screen and (max-width: 1199px) {
   .section__banner {
     padding-bottom: 23.938rem;
     background-size: 40.625rem auto;
   }
-
   .section__banner .title {
     padding: 2.5rem 0 0;
   }
-
   .section__banner .title br:nth-of-type(2) {
     display: block;
   }
-
   .section__link {
-    padding: 0.625rem 0 0;
+    padding: 1.875rem 0 0;
   }
 }
-
 @media screen and (max-width: 767px) {
   .section__banner {
     padding: 3.938rem 2rem 11.5rem;
     background-size: 18.875rem auto;
   }
-
   .section__banner .title {
     padding: 1.75rem 0 0;
   }
-
   .section__banner .btn__link-add {
     margin-top: 1.5rem;
     width: 12.5rem;
     font-size: 0.875rem;
     line-height: 2.313rem;
   }
-
   .section__link {
     padding: 0;
   }
-
   .section__link .section__text__box p::before {
     background-image: url(../../img/bg/bg-sec-1.png);
   }
-
   .section__folder .section__text__box p::before {
     background-image: url(../../img/bg/bg-sec-2.png);
   }
-
   .section__share .section__text__box p::before {
     background-image: url(../../img/bg/bg-sec-3.png);
   }
-
   .section__search .section__text__box p::before {
     background-image: url(../../img/bg/bg-sec-4.png);
   }
 }
+
+/*# sourceMappingURL=main.css.map */
