refactor(mentor): 유지보수를 위한 button 태그 class추가

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header {
   top: 0;
 }
 
-header button {
+header .onclick-signin {
   font-size: 18px;
   border: none;
   padding: 16px 20px;
@@ -78,7 +78,7 @@ header button {
   word-wrap: break-word;
 }
 
-.main button {
+.main .onclick-signup {
   font-size: 18px;
   border: none;
   padding: 16px 20px;
