--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 
 :root {
   --pirmary-6d6afe: #6d6afe;
@@ -20,4 +22,174 @@ body {
   height: 100vh;
   font-family: Pretendard;
   background-color: var(--gray-F0F6FF);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 200px;
+  max-width: 1520px;
+  margin: 0 auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--gray-F0F6FF);
+}
+
+.header_btn {
+  width: 128px;
+  padding: 16px 20px;
+  border-style: none;
+  border-radius: 8px;
+  background: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  color: #f5f5f5;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.main_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.main_section_text {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 80px;
+  margin-top: 163px;
+}
+
+.main_section_span {
+  background: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.main_section_btn {
+  width: 350px;
+  padding: 16px 20px;
+  border-style: none;
+  border-radius: 8px;
+  background: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  color: #f5f5f5;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 40px;
+  cursor: pointer;
+}
+
+.main_section_img {
+  margin-top: 90px;
+}
+
+.section_boxs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex_boxs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 157px;
+}
+
+.boxs_margin_top {
+  margin-top: 120px;
+}
+
+.boxs_margin {
+  margin-top: 100px;
+}
+
+.flex_box_text {
+  font-size: 48px;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+}
+
+.flex_box_p {
+  color: #6b6b6b;
+  font-family: Abel;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 10px;
+}
+
+.text_span_first {
+  background: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text_span_second {
+  background: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text_span_third {
+  background: linear-gradient(
+    99deg,
+    #6d7ccd 19.76%,
+    rgba(82, 136, 133, 0.22) 52.69%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text_span_fourth {
+  background: var(
+    --Fandom-K-gra-blue-to-pink,
+    linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.footer {
+  height: 160px;
+  background-color: #111322;
+  padding: 32px 104px 64px 104px;
+  margin-top: 170px;
+  font-size: 16px;
+  font-family: Acme;
+}
+
+.footer_div {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1712px;
+  margin: 0 auto;
+}
+
+.footer_p {
+  color: #676767;
+}
+
+.footer_center_link_div {
+  display: flex;
+  gap: 30px;
+}
+
+.footer_center_link {
+  color: #cfcfcf;
+  text-decoration: none;
+}
+
+.footer_linkbox {
+  display: flex;
+  height: 20px;
+  gap: 12px;
 }
