--- a/css/Linkbrary.css
+++ b/css/Linkbrary.css
@@ -1,488 +1,196 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import "./global.css";
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #edf7ff;
+}
+
+.gnb {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 9.4rem;
+  max-width: 192rem;
+  padding: 0 20rem;
 }
 
 header {
-  background-color: #F0F6FF;
-  position: sticky;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  flex: none;
-  align-self: stretch;
-  top: 0;
-  left: 0;
+  align-items: center;
   width: 100%;
-  padding: 20px 20px;
-  gap: 8px;
-  height: 93px;
-  flex-grow: 0;
-  padding-left: 8%;
-  padding-right: 8%;
-  z-index: 1;
+  background-color: #edf7ff;
 }
 
-header .logo {
-  position: absolute;
-  left: 10%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: #6D6AFE;
-  width: 133px;
-  height: 24px;
-  cursor: pointer;
+.hero-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 4rem;
+  padding-top: 7rem;
 }
 
-header .login_btn {
-  position: absolute;
-  right: 8%;
-  width: 128px;
-  height: 53px;
-  padding: 16px 20px 16px 20px;
-  border-radius: 8px;
-  border: 0;
-  outline: transparent;
+.cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5.4rem;
   cursor: pointer;
-  gap: 10px;
-  font-family: 'Pretendard';
-  font-size: 18px;
+  background-image: linear-gradient(135deg, var(--primary) 0%, #6ae3fe 100%);
+  border-radius: 0.8rem;
+  color: #f5f5f5;
+  font-size: 1.8rem;
   font-weight: 600;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: rgba(245, 245, 245, 1);
-  background: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
 }
 
-.section_1 {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  background-color: #F0F6FF;
-  max-width: 1920px;
-  width: 100%;
-  height: 953px;
-  align-items: center;
-  text-align: center;
-  padding: 16px 20px 16px 20px;
-  justify-content: space-between;
+.cta-short {
+  width: 12.8rem;
 }
 
-.section_1 h2 {
-  font-family: 'Pretendard';
-  font-size: 64px;
+.cta-long {
+  width: 35rem;
+}
+
+.slogan {
+  text-align: center;
+  font-size: 6.4rem;
   font-weight: 700;
-  line-height: 80px;
-  letter-spacing: 0px;
-  text-align: center;
-  align-items: center;
-  color: linear-gradient(0deg, #000000, #000000);
-  position: relative;
-  top: 50px;
+  line-height: 8rem;
 }
 
-.section_1 h2 span {
-  background: linear-gradient(to right, #6D6AFE , #FF9F9F);
-  color: transparent;
+.slogan-gradient {
+  background-image: linear-gradient(119deg, var(--primary) 0%, #ff9f9f 100%);
+}
+
+.background-clip-text {
+  background-clip: text;
   -webkit-background-clip: text;
+  color: transparent;
 }
 
-.link_plus_btn {
-  background: linear-gradient(to right, #6D6AFE, #6AE3FE);
-  color: #F5F5F5;
-  display: inline-block;
-  font-family: 'Pretendard';
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 21px;
+.hero-image {
+  width: 120rem;
+  height: 59rem;
+}
+
+article {
+  padding-top: 7rem;
+  padding-bottom: 12rem;
+}
+
+section {
+  display: grid;
+  justify-content: center;
+  column-gap: 15.7rem;
+  row-gap: 1rem;
+  width: 100%;
+  height: 55rem;
+  padding: 50px 0;
+}
+
+section:nth-of-type(odd) {
+  grid-template:
+    ". image"
+    "title image"
+    "description image"
+    ". image"
+    /291px 55rem;
+}
+
+section:nth-of-type(even) {
+  grid-template:
+    "image ."
+    "image title"
+    "image description"
+    "image ."
+    /550px 29.1rem;
+}
+
+.title {
+  grid-area: title;
   width: 350px;
-  height: 53px;
-  top: 270px;
-  left: 785px;
-  margin: 100px;
-  border-radius: 8px;
-  border: 0;
-  letter-spacing: 0em;
-  cursor: pointer;
-}
-
-.main_img {
-  position: relative;
-  max-width: 1200px;
-  width: 1200px;
-  height: 590px;
-  bottom: 66px;
-}
-
-h3 {
-  color: linear-gradient(0deg, #000000, #6B6B6B);
-  font-family: 'Pretendard';
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
-  line-height: 57.6px;
-  letter-spacing: -0.3px;
+  line-height: 5.8rem;
+  letter-spacing: -0.03rem;
 }
 
-.colorname_1 {
-  background: linear-gradient(to right, #FE8A8A, #A4CEFF);
-  color: transparent;
-  -webkit-background-clip: text;
+.title-1-gradient {
+  background-image: linear-gradient(117deg, #fe8a8a 2.29%, #a4ceff 100%);
 }
-
-.colorname_2 {
-  background: linear-gradient(to right, #6FBAFF, #FFD88B);
-  color: transparent;
-  -webkit-background-clip: text;
+.title-2-gradient {
+  background-image: linear-gradient(304deg, #6fbaff 0%, #ffd88b 100%);
 }
-
-.colorname_3 {
-  background: linear-gradient(to right, #6D7CCD 100%, #528885 22%);
-  color: transparent;
-  -webkit-background-clip: text;
+.title-3-gradient {
+  background-image: linear-gradient(133deg, #2945c7 0%, #dbe1f8 100%);
 }
-
-.colorname_4 {
-  background: linear-gradient(to right, #FE578F, #68E8F9);
-  color: transparent;
-  -webkit-background-clip: text;
+.title-4-gradient {
+  background-image: linear-gradient(310deg, #fe578f 0%, #68e8f9 100%);
 }
 
 .description {
-  font-family: 'Abel';
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: rgba(107, 107, 107, 1);
+  grid-area: description;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #6b6b6b;
+  line-height: 150%;
 }
 
-.section_2 {
-  position: relative;
-  width: 100%;
-  height: 620px;
-  display: flex;
-  justify-content: center;
-}
-
-.section_2_text {
-  width: 310px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
-  justify-content: space-between;
-  height: 198px;
-}
-
-.middle_independent {
-  max-width: 998px;
-  width: 100%;
-  height: 450px;
-  position: absolute;
-  top: 120px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.middle {
-  max-width: 998px;
-  width: 100%;
-  height: 450px;
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.section_2_img {
-  max-width: 550px;
-  width: 550px;
-  height: 450px;
-}
-
-.section_common {
-  position: relative;
-  margin: 0;
-  width: 100%;
-  height: 550px;
-  display: flex;
-  justify-content: center;
-}
-
-.section_common_text {
-  width: 320px;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  display: flex;
-  height: 172px;
-}
-
-.section_3_img {
-  max-width: 550px;
-  width: 550px;
-  height: 450px;
-}
-
-.section_4_img {
-  max-width: 550px;
-  width: 550px;
-  height: 450px;
-}
-
-.section_5_img {
-  max-width: 550px;
-  width: 550px;
-  height: 450px;
+.content-image {
+  grid-area: image;
+  width: 55rem;
+  height: 45rem;
 }
 
 footer {
-  background: #111322;
-  color: white;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  height: 160px;
-  padding: 32px 104px 64px 104px;
-}
-
-.footer{
-  position: absolute;
-  display: grid;
-  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
-  justify-content: space-between;
-  place-items: center;
-  top: 30%;
-  transform: translate(0, -50%);
-  width: 80%;
-  height: 20px;
-}
-
-.footer a {
-  text-decoration: none;
-  color: #CFCFCF;
-}
-
-.priy_faq {
   display: flex;
-  align-items: center;
-  font-family: 'Acme';
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #CFCFCF;
-  gap: 30px;
+  justify-content: center;
+  width: 100%;
+  height: 16rem;
+  padding-top: 3.2rem;
+  background-color: var(--black);
 }
 
-.footer_info {
-  font-family: 'Acme';
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
+.footer-box {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 192rem;
+  height: fit-content;
+  padding: 0 10.4rem;
+}
+
+.copyright {
   color: #676767;
-  justify-self: start;
+  font-family: Arial;
+  font-size: 1.6rem;
 }
 
-.footer_link {
-  display: grid;
-  justify-self: end;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 12px;
+.footer-links {
+  display: flex;
+  column-gap: 3rem;
+  padding-right: 1.8rem;
 }
 
-@media(max-width: 1199px) {
-
-  /* 세션별 사이즈 재설정 */
-  .section_1 {
-    height: 756px;
-    padding-top: 40px;
-  }
-
-  .section_2 {
-    height: 445px;
-  }
-
-  .section_common {
-    height: 415px;
-  }
-
-  .section_1_contents {
-    width: 700px;
-    height: 315px;
-  }
-
-  .main_img {
-    max-width: 700px;
-    width: 100%;
-    height: 300px;
-    padding-top: 30px;
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-
-  .main_img > img {
-    max-width: 650px;
-    width: 400px;
-    height: 257px;
-  }
-
-  .middle_independent {
-    width: 700px;
-    height: 315px;
-    top: 80px;
-  }
-
-  .middle {
-    width: 700px;
-    height: 315px;
-  }
-
-  .section_img {
-    width: 385px;
-    height: 315px;
-  }
-
-  .section_img > img {
-    width: 100%;
-    height: 315px;
-  }
+.footer-link {
+  color: #cfcfcf;
+  font-family: Arial;
+  font-size: 1.6rem;
 }
 
-@media (min-width: 375px) and (max-width: 767px) {
-  .section_1 {
-    width: 100%;
-    height: 391px;
-  }
-
-  .section_1_contents{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 350px;
-    width: 100%;
-    height: 371px;
-  }
-
-  .section_1_text > h2 {
-    top: 0;
-    line-height: 42px;
-    font-size: 32px;
-    letter-spacing: -5px;
-  }
-
-  .link_plus_btn {
-    max-width: 180px;
-    width: 100%;
-    height: 37px;
-    font-size: 14px;
-  }
-
-  .main_img {
-    max-width: 350px;
-    width: 100%;
-    height: 209px;
-  }
-
-  .main_img > img {
-    max-width: 350px;
-    width: 100%;
-    height: 178px;
-  }
-
-  .section_2 {
-    height: 550px;
-    background-color: #ffffff;
-  }
-
-  .middle_independent{
-    max-width: 350px;
-    width: 100%;
-    height: 375px;
-  }
-
-  .section_2_text {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    height: 85px;
-    top: 0;
-  }
-
-  .section_2_text > h3 {
-    font-size: 26px;
-    max-width: 325px;
-    width: 100%;
-  }
-
-  .section_2_text > p {
-    font-size: 15px;
-    max-width: 325px;
-    width: 100%;
-  }
-
-  .section_common {
-    width: 100%;
-    height: 451px;
-  }
-
-  .middle {
-    max-width: 325px;
-    width: 100%;
-    height: 374px;
-    top: 40px;
-    gap: 24px;
-  }
-
-  .middle.reverse {
-    flex-direction: column-reverse;
-  }
-
-  .section_common_text {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    height: 85px;
-    top: 10px;
-  }
-
-  .section_common_text > h3 {
-    font-size: 23px;
-    max-width: 325px;
-    width: 100%;
-  }
-
-  .section_common_text > p {
-    font-size: 15px;
-    max-width: 325px;
-    width: 100%;
-  }
-
-  .section_img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%);
-    max-width: 325px;
-    width: 100%;
-    height: 265px;
-  }
-
-  .section_img > img {
-    width: 100%;
-    height: 265px;
-  }
+.sns {
+  display: flex;
+  column-gap: 1.2rem;
+  height: 2rem;
 }
