--- a/css/index.css
+++ b/css/index.css
@@ -194,3 +194,65 @@ footer {
   column-gap: 1.2rem;
   height: 2rem;
 }
+
+/* T a b l e t */
+
+@media screen and (max-width: 1199px) {
+
+  nav {
+    width: 100%;
+    height: 9.3rem;
+    padding: 20px 32px;
+    gap: 8px;
+  }
+
+  .gnb {
+    max-width: 799px;
+    width: 100%;
+    height: 5.3rem;
+  }
+
+  .slogan {
+    max-width: 630px;
+  }
+
+  .hero-image {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+    padding: 30px 24px 0 24px;
+  }
+
+  section {
+    column-gap: 5rem;
+    width: 100%;
+    height: 31.5rem;
+    padding: 0;
+    margin: 80px 0;
+  }
+
+  section:nth-of-type(odd) {
+    grid-template:
+      ". image"
+      "title image"
+      "description image"
+      ". image"
+      /262px 38.5rem;
+  }
+
+  section:nth-of-type(even) {
+    grid-template:
+      "image ."
+      "image title"
+      "image description"
+      "image ."
+      /38.5rem 262px;
+  }
+
+  .content-image {
+    grid-area: image;
+    width: 38.5rem;
+    height: 31.5rem;
+  }
+
+}
