--- a/style.css
+++ b/style.css
@@ -21,21 +21,23 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: Pretendard;
-  background-color: var(--gray-F0F6FF);
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 20px 200px;
-  max-width: 1520px;
-  margin: 0 auto;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background-color: var(--gray-F0F6FF);
+}
+
+.header_div {
+  max-width: 1520px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .header_btn {
@@ -55,6 +57,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: var(--gray-F0F6FF);
 }
 
 .main_section_text {
@@ -92,6 +95,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 
 .flex_boxs {
@@ -193,3 +197,53 @@ body {
   height: 20px;
   gap: 12px;
 }
+
+.br_hidden {
+  display: none;
+}
+
+@media (max-width: 1199px) {
+  .header {
+    padding: 20px 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--gray-F0F6FF);
+  }
+
+  .header_div {
+    max-width: 799px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .br_hidden {
+    display: inline;
+  }
+
+  .main_section_img {
+    margin-top: 69px;
+    width: 650px;
+    height: 383px;
+  }
+
+  .flex_boxs {
+    gap: 51px;
+  }
+
+  .imgs {
+    width: 385px;
+    height: 315px;
+  }
+
+  .boxs_margin_top {
+    margin-top: 80px;
+  }
+}
+
+/* @media (max-width: 767px) {
+  
+} */
