--- a/css/sign.css
+++ b/css/sign.css
@@ -150,3 +150,15 @@ header {
   padding-top: 0.2rem;
   background-color: #f5e14b;
 }
+
+@media screen and (max-width: 1199px) {
+  .sign-box, .sns-box {
+    bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .sign-box, .sns-box {
+    bottom: 10%;
+  }
+}
