--- a/css/default.css
+++ b/css/default.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: "Pretendard", sans-serif;
+  font-family: "Pretendard";
 }
 
 a {
@@ -49,5 +49,5 @@ img {
   border-radius: 8px;
   color: var(--white-color);
   font-weight: 600;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
