--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 }
 
 .main__text {
-  font-size: 64px;
+  font-size: 4rem;
   font-weight: 700;
   line-height: 80px;
   text-align: center;
@@ -78,7 +78,7 @@
 }
 
 .main-article__title {
-  font-size: 48px;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 58px;
 }
@@ -114,7 +114,7 @@
 .main-article__p {
   margin-top: 10px;
   font-family: "Abel", "Pretendard", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 24px;
   color: #6B6B6B;
