--- a/css/sign.css
+++ b/css/sign.css
@@ -166,11 +166,16 @@ header {
   border-radius: 50%;
 }
 
-/*Mobile*/
-@media (max-width: 768px) {
+/*태블릿 사이즈*/
+
+@media (max-width: 1199px) {
   body {
-    padding-left: 32px;
-    padding-right: 32px;
-    max-width: 400px;
+    padding-top: 200px;
+  }
+}
+
+@media (max-width: 769px) {
+  body {
+    padding-top: 120px;
   }
 }
