refactor(mentor): border초기화 속성 reset.css로 이동

--- a/css/signin.css
+++ b/css/signin.css
@@ -82,7 +82,7 @@ input:focus  {
 }
 
 
-.button-sign {
+.button-login {
   width: 100%;
   padding: 16px 20px;
   background: linear-gradient(91deg, #6D6AFE 0%, #6AE3FE 100%);
