--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ nav {
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: #edf7ff;
+  background-color: #f0f6ff;
 }
 
 .gnb {
@@ -32,7 +32,7 @@ header {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #edf7ff;
+  background-color: #f0f6ff;
 }
 
 .header-link {
@@ -276,6 +276,7 @@ footer {
 
   .header-contents {
     gap: 2.4rem;
+    padding-top: 2.8rem;
   }
 
   .header-title {
