--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,18 @@ header {
   top: 0;
 }
 
-header .onclick-signin {
+.button-style{
   font-size: 18px;
   padding: 16px 20px;
   color: #F5F5F5;
   font-family: Pretendard;
   font-weight: 600;
-  width: 128px;
   border-radius: 8px;
   background-image: linear-gradient(90deg,var(--primary),skyblue);
+}
+
+header .onclick-signin {
+  width: 128px;
   cursor: pointer;
 }
 
@@ -74,16 +77,7 @@ header .onclick-signin {
 }
 
 .main .onclick-signup {
-  font-size: 18px;
-  border: none;
-  padding: 16px 20px;
-  color: #F5F5F5;
-  font-size: 18px;
-  font-family: Pretendard;
-  font-weight: 600;
   width: 350px;
-  border-radius: 8px;
-  background-image: linear-gradient(90deg,var(--primary),skyblue);
 }
 
 .main img {
