Feat landing page media query

--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,20 @@ nav {
   width: 100%;
   height: 9.4rem;
   max-width: 192rem;
-  padding: 0 20rem;
+  padding: 0 8rem;
+}
+
+.top-login {
+  background: linear-gradient(90deg, var(--primary) 0.12%, #6ae3fe 101.84%);
+  border-radius: 1rem;
+  color: var(--white);
+  font-size: 1.8rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 12rem;
+  height: 5rem;
 }
 
 header {
@@ -39,19 +52,6 @@ header {
   align-items: center;
   row-gap: 4rem;
   padding-top: 7rem;
-}
-
-.top-login {
-  background: linear-gradient(90deg, var(--primary) 0.12%, #6ae3fe 101.84%);
-  border-radius: 1rem;
-  color: var(--white);
-  font-size: 1.8rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 12rem;
-  height: 5rem;
 }
 
 .header-title {
@@ -106,7 +106,7 @@ section:nth-of-type(odd) {
     'title img'
     'description img'
     '. img'
-    /291px 55rem;
+    /30rem 55rem;
 }
 
 section:nth-of-type(even) {
@@ -115,7 +115,7 @@ section:nth-of-type(even) {
     'img title'
     'img description'
     'img .'
-    /550px 29.1rem;
+    /55rem 30rem;
 }
 
 .title {
@@ -179,7 +179,7 @@ footer {
   width: 100%;
   max-width: 192rem;
   height: fit-content;
-  padding: 0 10.4rem;
+  padding: 3rem 10rem 0;
 }
 
 .footer-codeit {
@@ -202,4 +202,149 @@ footer {
   display: flex;
   column-gap: 1.3rem;
   height: 2rem;
+}
+
+/*Tablet size*/
+@media (min-width: 768px) and (max-width: 1199px) {
+  .top-logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 80rem;
+  }
+
+  .landing-header {
+    row-gap: 4rem;
+  }
+
+  .header-title {
+    width: 70rem;
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+
+  .header-img {
+    width: 70rem;
+    height: 35rem;
+  }
+
+  section {
+    column-gap: 4rem;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    height: 45rem;
+  }
+
+  section:nth-of-type(odd) {
+    grid-template-columns: 30rem 38rem;
+  }
+
+  section:nth-of-type(even) {
+    grid-template-columns: 38rem 30rem;
+  }
+
+  .sec-img {
+    width: 40rem;
+    height: 30rem;
+  }
+}
+
+/*Mobile size*/
+@media (min-width: 375px) and (max-width: 767px) {
+  .top-logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 80rem;
+    height: 8rem;
+    padding: 0 5rem;
+  }
+
+  .top-login {
+    width: 10rem;
+  }
+
+  .signup-link {
+    width: 20rem;
+  }
+
+  .landing-header {
+    row-gap: 2rem;
+  }
+
+  .header-title {
+    font-size: 3.5rem;
+    line-height: 4.5rem;
+    letter-spacing: -0.4rem;
+    padding: 0 1rem;
+  }
+
+  .header-img {
+    width: 100%;
+    height: auto;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 3rem;
+    height: auto;
+  }
+
+  section:nth-of-type(odd),
+  section:nth-of-type(even) {
+    grid-template-areas:
+      'title'
+      'img'
+      'description';
+  }
+
+  .title {
+    display: inline;
+    margin-bottom: 1rem;
+    font-size: 3.2rem;
+    letter-spacing: -0.7rem;
+  }
+
+  .description {
+    display: inline;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    letter-spacing: -0.05rem;
+  }
+
+  .sec-img {
+    width: 100%;
+    height: auto;
+  }
+
+  section > h6 {
+    order: 1;
+  }
+
+  .br_tag {
+    display: inline;
+    content: ' ';
+    padding: 0 0.1rem;
+  }
+
+  .footer-box {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem 3rem;
+  }
+
+  .footer-links {
+    margin-bottom: 2rem;
+  }
+
+  .footer-sns {
+    justify-content: right;
+  }
+
+  .footer-box > .footer-codeit {
+    order: 1;
+  }
 }
