main페이지 header 테블릿 버전으로 좌우여백 수정

--- a/css/main.css
+++ b/css/main.css
@@ -154,5 +154,12 @@
   gap: 12px;
 }
 
-/* 로그인 */
+@media (max-width: 1199px) {
+  .header {
+    padding: 20px 32px;
+  }
 
+	.header__inner {
+    width: 100%;
+  }
+}
