--- a/css/style.css
+++ b/css/style.css
@@ -137,28 +137,28 @@ header .onclick-signin {
   overflow: hidden;
 }
 
-.service-01 span{
+.service-01 span {
   background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.service-02 span{
+.service-02 span {
   background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.service-03 span{
+.service-03 span {
   background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
 
-.service-04 span{
+.service-04 span {
   background: var(--Fandom-K-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
   background-clip: text;
   -webkit-background-clip: text;
@@ -169,6 +169,10 @@ header .onclick-signin {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.service-01 .center {
+  position: relative;
 }
 
 .service-02 img {
